@@ -35,6 +35,9 @@ Working version
   dummy Lpushtrap generated in linearize
   (Greta Yorsh and Vincent Laviron, review by Xavier Leroy)
 
+- #8707: Simplif: more regular treatment of Tupled and Curried functions
+  (Gabriel Scherer, review by Leo White and Alain Frisch)
+
 ### Runtime system:
 
 - #8619: Ensure Gc.minor_words remains accurate after a GC.
